<resources>
    <string name="app_name">1MB</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">One Minute Before</string>
    <string name="action_sign_up">Sign up now</string>
    <string name="login_successful">Login successful</string>
    <string name="first_name_asterisk">First Name*</string>
    <string name="last_name_asterisk">Last Name*</string>
    <string name="mobile_no_asterisk">Mobile Number*</string>
    <string name="time_zone">Time Zone</string>
    <string name="time_zone_example">(EST,CST, MST or PST)</string>
    <string name="level">Level</string>
    <string name="level_example">(Light, Medium or Advanced)</string>
    <string name="register">Register</string>
    <string name="have_login">Already Registered ?</string>
    <string name="title_activity_home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_settings">Settings</string>
    <string name="setting_workout">Workout Settings</string>
    <string name="reports">Reports</string>
    <string name="please_wait">Please wait...</string>
    <string name="some_error_occured">Some error occurred.</string>
    <string name="name_asterisk">Name*</string>
    <string name="email_asterisk">Email*</string>
    <string name="password_asterisk">Password*</string>
    <string name="login">Login</string>
    <string name="action_sign">Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="one_minute_workout">One minute workout</string>
    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="height_256dp">256dp</string>
    <string name="one_minute_before_video">Watch your one minute before workout video</string>
    <string name="no_video_available_something_went_wrong">No video available, Something went wrong, Try later</string>
    <string name="contact">Contact us</string>
    <string name="sample_exercises">Sample exercises</string>
    <string name="about">About us</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home_new">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sample_workout">Sample Exercises</string>
    <string name="confirm_logout">Confirm logout</string>
    <string name="msg_confirm_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_about">About us</string>
    <string name="title_activity_contact">Contact us</string>
    <string name="one_minute_before">One Minute Before</string>
    <string name="one_minute_before_desc"><![CDATA[Provides Exercise Alerts Via Your Cell And Social Media At Your Desk, Home & More! Every Hour For One Minute Before The Hour Ends]]></string>
    <string name="desc_home_1">EXERCISES from Entrepreneur Greg Reid. Greg is an entrepreneur, and the CEO of several successful corporations. His other projects include The Millionaire Mentor, Positive Impact, Three Feet from Gold and Napoleon Hill’s Road to Riches.</string>
    <string name="desc_home_2">EXERCISES from Star Athletes like James Lawrence the Iron Cowboy. These are some of the same workouts that helped the Iron Cowboy achieve 2 Guiness World Records. Also in 2015 he completed 50 Ironman Courses, in 50 consecutive days through all 50 States.</string>
    <string name="desc_home_3">Recieve text alerts of great exercices you can do at your desk for one minute every hour, the minute before that hour ends</string>
    <string name="desc_home_4">*7:59 am, 8:59 am and so on throughout the day till 4:59 pm - total of 10 text exercises</string>
    <string name="upcoming_alarm">Upcoming alarm</string>
    <string name="push_ups">Push ups</string>
    <string name="upcoming_exercise">Upcoming exercise</string>
    <string name="time_left_hour">%1sh</string>
    <string name="time_left_minutes" formatted="false">%1sm %2ss</string>
    <string name="today_count">Today\'s count</string>
    <string name="title_activity_workout_setting">WorkoutSettingActivity</string>
    <string name="reference_code">Reference code</string>
    <string name="phone_asterisk">Phone*</string>
    <string name="time_zone_asterisk">Time Zone*</string>
    <string name="level_asterisk">Level*</string>
    <string name="schedule_workout">Schedule your Workouts Now</string>
    <string name="no_workouts_schedule_workout">You don\'t have any workouts configured </string>
    <string name="title_activity_settings_new">Settings</string>
    <string name="pref_header_workouts">Set Workouts</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_change_password">Change Password</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_fitness_level">Fitness Level</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="pref_header_timer_demo">Timer demo</string>
    <string name="start_timer">Start timer</string>
    <string name="reps_count">Reps count</string>
    <string name="enter_reps">Enter reps</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="submit">Submit</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="error_no_password">Please enter password</string>
    <string name="error_confirm_password">Please confirm your password</string>
    <string name="msg_password_changed">Password changed successfully</string>
    <string-array name="level_array">
        <item>Light</item>
        <item>Intermediate</item>
        <item>Advanced</item>
        <item>All Star</item>
    </string-array>
    <string-array name="time_zone_array">
        <item>EST</item>
        <item>CST</item>
        <item>MST</item>
        <item>PST</item>
    </string-array>
    <string name="title_activity_workout_settings">Workout Settings</string>
    <string name="msg_no_workout_added">You have not added any workout yet. Add workouts now.</string>
    <string name="add_workout">Add workout</string>
    <string name="select_hour">Select hour</string>
    <string name="select_workout">Select workout</string>
    <string name="done">Done</string>
    <string name="msg_thanks">Thanks for entering</string>
    <string name="prompt_current_password">Current password</string>
    <string name="error_no_current_password">Please enter current password</string>
    <string name="error_invalid_current_password">Invalid current password</string>
    <string name="msg_saving_please_wait">Saving workouts, please wait...</string>
    <string name="session_timeout">Session timeout</string>
    <string name="session_timeout_resolution">Please log in to continue</string>
    <string name="last_name">Last name</string>
    <string name="no_workout_for_today">No workouts done today yet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_category">Select category</string>
    <string name="select_level">Select level</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="about_detail">Simple and fun to use - whether or not your a fitness expert or just a beginner 1MB makes it so simple to follow our program.\n\nJust sign up and follow the alert from the app every one minute before the hour - the app will guide you through a day of 1 minute exercises you can do in your office at your desk or in your kitchen - the program makes movement and working out a habit that will make you more alert and active throughout your day</string>
    <string name="about_omb">About 1MB</string>
    <string name="detail">Detail</string>
    <string name="history">History</string>
    <string name="no_data_for_workout">No data for this exercise</string>
    <string name="view">View</string>
    <string name="workout_name">Workout name</string>
    <plurals name="days_hours">
        <item quantity="one">%dDay</item>
        <item quantity="other">%dDays</item>
    </plurals>
    <string name="title_activity_report_new">Reports</string>
    <string name="title_activity_reps_break_up">Reps break up</string>
    <string name="resume">Resume</string>
    <string name="title_activity_missed_workouts">Missed workouts</string>
    <string name="no_workouts_found">No workouts found</string>
    <string name="message">Message</string>
    <string name="msg_missed_workouts">You may have missed workouts. Would you like finish them?</string>
    <string name="missed_workouts">Missed workouts</string>
    <string name="desc_forgot_password">Please enter your email address</string>
    <string name="title_activity_forgot_password">Forgot password</string>
    <string name="success">Success</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="error">Error</string>
    <string name="title_profile">Profile</string>
    <string name="actions">Actions</string>
    <string name="info">Info</string>
    <string name="more">More</string>
    <string name="name">Name</string>
    <string name="info_saved">Profile update successfully</string>
    <string name="omb_channel_name">One minute before Notification</string>
</resources>