<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.oneminutebefore.workout.ChangePasswordActivity"
    tools:showIn="@layout/activity_change_password"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_current_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/text_heading"
                android:textSize="@dimen/text_size_normal"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_current_password">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/text_heading"
                android:textSize="@dimen/text_size_normal"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_confirm_password"
            android:layout_width="match_parent"
            android:layout_below="@+id/til_password"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_confirm_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/text_heading"
                android:textSize="@dimen/text_size_normal"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textStyle="bold"
            android:layout_below="@+id/til_confirm_password"
            android:layout_alignParentRight="true"/>

        <ProgressBar
            android:id="@id/progressBar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="6dp"
            android:visibility="gone"
            android:layout_toLeftOf="@+id/btn_submit"
            android:layout_below="@+id/til_confirm_password" />

    </RelativeLayout>

</RelativeLayout>
