<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->
    <header
        android:fragment="com.oneminutebefore.workout.SettingsActivityNew$FitnessLevelPreferenceFragment"
        android:icon="@drawable/ic_level"
        android:title="@string/pref_header_fitness_level" />

    <!--<header-->
        <!--android:fragment="com.oneminutebefore.workout.SettingsActivityNew$WorkoutsPreferenceFragment"-->
        <!--android:icon="@drawable/ic_add_alarm_black_24dp"-->
        <!--android:title="@string/pref_header_workouts" />-->

    <header
        android:icon="@drawable/ic_add_alarm_black_24dp"
        android:title="@string/pref_header_workouts" >

        <intent
            android:targetClass="com.oneminutebefore.workout.WorkoutSettingsActivity"
            android:targetPackage="com.oneminutebefore.workout" />
    </header>


    <header
        android:icon="@drawable/ic_vpn_key_black_24dp"
        android:title="@string/pref_header_change_password"
        >
        <intent
            android:targetClass="com.oneminutebefore.workout.ChangePasswordActivity"
            android:targetPackage="com.oneminutebefore.workout" />
    </header>

    <!--&lt;!&ndash;<header&ndash;&gt;-->
        <!--&lt;!&ndash;android:icon="@drawable/ic_access_alarm_24dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:title="@string/pref_header_timer_demo"&ndash;&gt;-->
        <!--&lt;!&ndash;&gt;&ndash;&gt;-->
        <!--&lt;!&ndash;<intent&ndash;&gt;-->
            <!--&lt;!&ndash;android:targetClass="com.oneminutebefore.workout.VideoPlayerActivity"&ndash;&gt;-->
            <!--&lt;!&ndash;android:targetPackage="com.oneminutebefore.workout"&ndash;&gt;-->
            <!--&lt;!&ndash;&gt;&ndash;&gt;-->
        <!--&lt;!&ndash;</intent>&ndash;&gt;-->
    <!--</header>-->

    <!--android:fragment="com.oneminutebefore.workout.SettingsActivityNew$DataSyncPreferenceFragment"-->

</preference-headers>
