<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textNoSuggestions|textCapWords"
            android:hint="@string/first_name_asterisk"
            android:textColorHint="@color/text_hint_color"
            android:textColor="@color/text_type_color"
            android:textSize="@dimen/text_size_large" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textNoSuggestions|textCapWords"
            android:hint="@string/last_name"
            android:textColorHint="@color/text_hint_color"
            android:textColor="@color/text_type_color"
            android:textSize="@dimen/text_size_large" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/text_hint_color"
            android:textColor="@color/text_type_color"
            android:hint="@string/email_asterisk"
            android:textSize="@dimen/text_size_large" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColorHint="@color/text_hint_color"
            android:textColor="@color/text_type_color"
            android:hint="@string/phone_asterisk"
            android:textSize="@dimen/text_size_large" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/text_hint_color"
            android:textColor="@color/text_type_color"
            android:inputType="textPassword"
            android:hint="@string/password_asterisk"
            android:textSize="@dimen/text_size_large" />

    </android.support.design.widget.TextInputLayout>

    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:id="@+id/til_time_zone"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<EditText-->
    <!--android:id="@+id/et_time_zone"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:inputType="textCapWords|text"-->
    <!--android:textColorHint="@color/text_hint_color"-->
    <!--android:textColor="@color/text_type_color"-->
    <!--android:hint="@string/time_zone_asterisk"-->
    <!--android:textSize="@dimen/text_size_large" />-->

    <!--</android.support.design.widget.TextInputLayout>-->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColorHint="@color/text_hint_color"
        android:text="@string/time_zone"
        android:layout_marginLeft="2dp"
        android:textColor="@color/seconday_text"
        android:textSize="12sp" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_time_zone"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_height="wrap_content"/>
    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:id="@+id/til_level"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<EditText-->
    <!--android:id="@+id/et_level"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:hint="@string/level_asterisk"-->
    <!--android:imeOptions="actionUnspecified"-->
    <!--android:inputType="text|textCapWords"-->
    <!--android:textColorHint="@color/text_hint_color"-->
    <!--android:textColor="@color/text_type_color"-->
    <!--android:textSize="@dimen/text_size_large" />-->

    <!--</android.support.design.widget.TextInputLayout>-->
    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="start"-->
    <!--android:layout_marginLeft="2dp"-->
    <!--android:text="@string/level"-->
    <!--android:textColor="@color/seconday_text"-->
    <!--android:textSize="12sp"-->
    <!--/>-->
    <!--<android.support.v7.widget.AppCompatSpinner-->
    <!--android:id="@+id/spinner_level"-->
    <!--android:minHeight="?attr/actionBarSize"-->
    <!--android:layout_width="match_parent"-->
    <!--style="@style/Base.Widget.AppCompat.Spinner.Underlined"-->
    <!--android:layout_height="wrap_content"/>-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_reference_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_reference_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reference_code"
            android:imeActionId="@+id/register"
            android:imeActionLabel="@string/register"
            android:imeOptions="actionUnspecified"
            android:inputType="text|textCapWords"
            android:textColorHint="@color/text_hint_color"
            android:textColor="@color/text_type_color"
            android:textSize="@dimen/text_size_large" />

    </android.support.design.widget.TextInputLayout>

</merge>