<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.oneminutebefore.workout.ForgotPasswordActivity"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/tv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_forgot_password"
            android:layout_marginBottom="@dimen/activity_horizontal_margin_8dp"
            android:textSize="18sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_below="@+id/tv_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/text_heading"
                android:textSize="@dimen/text_size_normal"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textStyle="bold"
            android:layout_below="@+id/til_email"
            android:layout_alignParentRight="true"/>

        <ProgressBar
            android:id="@id/progressBar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="6dp"
            android:visibility="gone"
            android:layout_toLeftOf="@+id/btn_submit"
            android:layout_below="@+id/til_email" />

    </RelativeLayout>

</RelativeLayout>